Feature: domain endpoints (#87)
* feature: basic CRUD operations for domains

* feature: add put method to domains

* docs: documentation for domains API

* fix: linter fix
